samples/_failures_safe/1761430946_89c909_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c7db42e.c: In function ‘main’:
./samples/SAFE/__tmp_1c7db42e.c:146:15: error: expected ‘;’ at end of input
  146 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_1c7db42e.c:146:9: error: expected declaration or statement at end of input
  146 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_1c7db42e.c:146:9: error: expected declaration or statement at end of input
